// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders the disabled state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0F766E",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 0.5,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#0C0A09",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Save
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the ghost variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "transparent",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#0C0A09",
          },
          {
            "color": "#0F766E",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the loading state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0F766E",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 0.5,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
  />
</View>
`;

exports[`<Button> renders the primary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#0F766E",
        "borderColor": "transparent",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#0C0A09",
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;

exports[`<Button> renders the secondary variant 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1,
        "justifyContent": "center",
      },
      {
        "alignSelf": "auto",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E7E5E4",
        "borderRadius": 12,
        "minHeight": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "includeFontPadding": false,
          },
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#0C0A09",
          },
          {
            "color": "#0C0A09",
          },
        ]
      }
    >
      OK
    </Text>
  </View>
</View>
`;
